--- a/src/components/GasSlider/GasSlider.css
+++ b/src/components/GasSlider/GasSlider.css
@@ -1,11 +1,12 @@
-.gas-slider-container {
+.App .gas-slider-container {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
+	margin-bottom: 60px;
 	margin-left: 2%;
 	width: 95%;
 }
-.gas-slider-container p {
+.App .gas-slider-container p {
 	align-self: flex-end;
 	flex-grow: 1.5;
 	margin-top: 0;
@@ -13,7 +14,7 @@
 @media only screen and (min-width: 550px) {
     /* Style adjustments for viewports that meet the condition */
     
-	.gas-slider-container > * {
+	.App .gas-slider-container > * {
 		flex: 1;
 		margin: 0.25rem 0.5rem;
 	}
